--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -643,10 +643,16 @@ Thus, similar to the way tools were modified to provide new affordances for part
 <!-- are explored in relation to the development of agency in the following chapter. -->
 ### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and incorporation in repertoires of practice
 
-This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter. Addressing GDPs as a mediational tool, Chapter 5 outlined design decisions, and this chapter explores the impact. For example, the uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram). This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools. In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter.
+This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter. Addressing GDPs as a mediational tool, Chapter 5 outlined design decisions, and this chapter explores the impact using data from video recordings.
+
+The uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram). This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools, a discussion of which forms a significant part of the following chapter.
 
 
-By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning.
+
+<!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
+
+
+<!-- By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning. -->
 
 The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration. The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015]. This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
 
