--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -344,6 +344,9 @@ Examples from the data of participants using GDPs as a framework for organisatio
 
 While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation (e.g., Toby), are propagated in other ways. For example, in Vignette 3 (V3.a), Ed cedes this aspect to his father in a way explored in the section below on division of labour. Secondly, there are potential issues concerning the validity of observations on the use of the GDP menu (and concepts) as navigational and organisational tools by participants, due to their nature as being introduced for that purpose. The danger here is of circular reasoning in methodology. At this early stage, this study acknowledges the potential of circular reasoning but observes the potential of GDP adoption and, in particular, the evolution of practices by participants. In addition, this process of using GDPs in this way was also discovered via an exploratory DBR approach, and thus its introduction is also significant and cannot be divorced from the aspect of participant reaction. Additionally, the potential of GDPs as a germ cell concept (as explored in Chapters 3 and 5) is explored in greater depth in the following chapter.
 
+
+
+
 <!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
 
 <!--
@@ -503,6 +506,21 @@ Once the code for the new game mechanic has been added, the child is guided to t
 
  <!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
+
+
+### Discussion of GP- Flexible Navigation/ not aligning with design cycles
+
+A possible existing framework on CGD&P to address the process of organising or scaffolding guided participation is that of design cycles. However, observations of participant design behaviour did not align with common design thinking concepts or advocated in design cycle frameworks [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. As typified in vignette 1 and 5, some younger participants, in particular, developed impressively fluid practices, demonstrating extremely rapid shifts between code editing, game testing, authoring assets in online tools, and migrating files, often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. If I had encouraged participants to follow prescribed design stages, this may have restricted this flexibility in practice [@kuby_rhizomatic_2016].
+
+In Vignette 4 (see 4.c in particular), we see Ed(c) break out of the more restrictive approach of plodding that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal. Mark (p) later joins in Ed(c)'s exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity. In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.  
+Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies, "I'm just going with it."
+
+These examples and many observations in this chapter show a variety of ways that GDPs assist  division of labour, and
+Thus, rather than design cycles a more flexible understanding is needed.
+
+  <!-- from other activity systems are incorporated into new practices. -->
+
+
 ## Use of GDPs in the cultural plane / community level of activity
 
 Following Rogoff's [@rogoff_observing_1995] three planes approach to analysis, the following section explores the use of GDPs at the community plane of activity. While Rogoff's earlier analysis of activity on a cultural plane emphasised the metaphor of apprenticeship, focusing on an already existing community, her later work with Gutiérrez [@gutierrez_cultural_2003] places greater emphasis on cultural activity as dynamic. This perspective examines existing and emerging norms and repertoires, adapted from participants’ engagement in other communities and contexts.
@@ -641,12 +659,25 @@ Thus, similar to the way tools were modified to provide new affordances for part
 <!-- the role of playtesting and including warm-up games and session reflections -->
 
 <!-- are explored in relation to the development of agency in the following chapter. -->
-### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and incorporation in repertoires of practice
+### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation (and incorporation in repertoires of practice)
+
+NOT SURE OF Repertoires YET .
 
 This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter. Addressing GDPs as a mediational tool, Chapter 5 outlined design decisions, and this chapter explores the impact using data from video recordings.
 
 The uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram). This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools, a discussion of which forms a significant part of the following chapter.
 
+
+IS THIS FOR HERE?
+
+The following diagram shows complexity of activity
+The games can be seen as boundary objects for complex, and expanded objects of activity.
+This incorporates diverse motivations, examples of which are above including but not limited to incorporting home intersts, supporting children, increasing coding skills, playful interaction,
+
+GDPs are used in diverse ways as mediational tools to support those aims.
+The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration.
+
+![Illustration 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_1.png){width=95%}
 
 
 <!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
@@ -654,8 +685,25 @@ The uses of the quick-start activities, tutorials, and code snippets as supporti
 
 <!-- By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning. -->
 
-The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration. The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015]. This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
 
+
+
+For many younger participants, playful interactions can be seen a a leading activity, or a primary motivation.
+
+The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
+
+The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies.
+
+The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015].
+
+
+
+This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
+
+
+Given the complexity of the object being worked on in this research, in particular in terms of goal formation and motivation, it is of value to return to existing research on CGD&P to evaluate the potential for this research to contribute to the field.
+
+One candidate to extend is the varied concepts of fluency in the field.
 
 
 <!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
@@ -663,11 +711,48 @@ The examples in this chapter show the importance of GDPs as a lingua franca, as 
 
 
 
-### Observations on emerging design practices
+### Observations on emerging (design practices) - REFRAME AS FLUENCY ACTIVITY?
 
 <!-- NOTE To restructure. -->
 
-The cultural section above identified the development and the value of flexible design processes in a way which invites discussion on how best to conceptualise these flexible approaches. Firstly, it is notable to make the flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. This section synthesises my observations on video data and my own journal reflections on this topic of designing for flow. Flow is a highly subjective experience, and as such, there is a danger that I privilege my own interests in this analysis, and a tendency that I reflect on in the concluding chapter. Beyond fluidity, I now identify and explore other characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design.
+
+The cultural section above identified the development and the value of flexible design processes in a way which invites discussion on how best to conceptualise these flexible approaches.
+Fluency is one candidate.
+
+
+
+
+
+What can be observed about the interaction of participants use of GDPs and the experience of participant fluency.
+
+Chapter 2 introduced varied forms of fluency
+
+MOVE OR COMPRESS?
+Firstly, it is notable to make the flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process.
+
+
+
+
+In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts.
+
+Chapter 2 also explored fluency in varied forms, often tied to constructionist research, technological, digital and computation.
+The guiding principle being self expression and identity formation.
+
+CHALLNGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION. 
+
+NOTE - IS THIS IN THE NEXT CHAPTER? is this just in relation to GDPs?
+Beyond fluidity, it is of value to explore explore other characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design.
+
+INTEGRATE/ mOVE/
+This section synthesises my observations on video data and my own journal reflections on this topic of designing for flow. Flow is a highly subjective experience, and as such, there is a danger that I privilege my own interests in this analysis, and a tendency that I reflect on in the concluding chapter.
+
+
+<!-- REMOVE OR MOVE TO LR IF NEEDED.
+Given the disparate nature of the features of designed and emerging pedagogy, it is of value to address ways of conceptualise the overall learning process. While the chaotic directions possible in design evoke a rhizomatic approach to learning [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], I concur with Biffi et al [ @biffi_chasing_2017-1, p. 972] who identify significant competencies required which are not well-aligned with the age group of this context.  -->
+
+
+
+
 
 
 <!-- A DESIGN FOR MENTALISTS BY A MENTALIST -->
@@ -691,10 +776,6 @@ As explored in the literature review design stages as a conceptual design tool i
 
 <!-- **Observations and evidence on flexible design stages** -->
 
-Observations of participant design behaviour did not align with common design thinking concepts or advocated in design cycle frameworks [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024] as I initially thought might be the case. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. As typified in vignette 1 and 5, some younger participants, in particular, developed impressively fluid practices, demonstrating extremely rapid shifts between code editing, game testing, authoring assets in online tools, and migrating files, often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. If I had encouraged participants to follow prescribed design stages, this may have restricted this flexibility in practice [@kuby_rhizomatic_2016].
-
-In Vignette 4 (see 4.c in particular), we see Ed(c) break out of the more restrictive approach of plodding that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal. Mark (p) later joins in Ed(c)'s exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity. In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.  
-Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies, "I'm just going with it." These examples and many observations in this chapter show a variety of ways that home interests, division of labour, and varied repertoires from other activity systems are incorporated into new practices.
 
 
 
@@ -710,15 +791,6 @@ sTUDENT HELPERS - SEE END - OR VIGNETTE ON REFLECTION
 
 
 <!-- One potentially fruitful perspective is that of rhizomatic design approaches [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researchers identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context. -->
-
-
-Given the disparate nature of the features of designed and emerging pedagogy, it is of value to address ways of conceptualise the overall learning process. While the chaotic directions possible in design evoke a rhizomatic approach to learning [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], I concur with Biffi et al [ @biffi_chasing_2017-1, p. 972] who identify significant competencies required which are not well-aligned with the age group of this context. While supporting a flexible learner pathway is vital to this approach, the value of restrictions to creativity are also important here. The restricted genre, pixel art format and templated approach act not only as technical  scaffolds but also aligns with research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama.
-
-The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype]. Thus, I now explore the tools, process and the community in this study mutually encourage an flexible approach often referred to as _jamming_. As explored in Chapter 2 existing research suggests that Game Jams can be profitably used in education contexts [@aurava_game_2021], although there is no agreement on the characteristics game jam pedagogy, and scant guidance on how to address potentially problematic issues (list these),
-
-The characteristics described above offer a contribution to the literature on Game Jam pedagogy and learning design of this study offers greater scaffolding to the process to facilitate the process of jamming as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]. This strand is developed in the following chapter.
-
-
 
 <!-- This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.   -->
 
