link to next chapter

--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -655,6 +655,7 @@ Thus, similar to the way tools were modified to provide new affordances for part
 
 ## Discussion
 
+This discussion section discusses the complexity of the exanded object of activity and the diverse mediational uses of GDPs using a 3GAT framework. Bearing in mind the challenge of communicating the diverse motivations and forms of activity involved, it returns to concepts of proximal flow and computational fluency present in CGD&P research to begin an analysis of how this research can contribute to understandings in this domain.
 
 <!-- the role of playtesting and including warm-up games and session reflections -->
 
@@ -680,13 +681,6 @@ The examples in this chapter show the importance of GDPs as a lingua franca, as 
 ![Illustration 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_1.png){width=95%}
 
 
-<!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
-
-
-<!-- By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning. -->
-
-
-
 
 For many younger participants, playful interactions can be seen a a leading activity, or a primary motivation.
 
@@ -706,10 +700,12 @@ Given the complexity of the object being worked on in this research, in particul
 One candidate to extend is the varied concepts of fluency in the field.
 
 
+<!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
+
+
+<!-- By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning. -->
+
 <!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
-
-
-
 
 ### Observations on emerging (design practices) - REFRAME AS FLUENCY ACTIVITY?
 
@@ -720,9 +716,6 @@ The cultural section above identified the development and the value of flexible 
 Fluency is one candidate.
 
 
-
-
-
 What can be observed about the interaction of participants use of GDPs and the experience of participant fluency.
 
 Chapter 2 introduced varied forms of fluency
@@ -731,20 +724,32 @@ MOVE OR COMPRESS?
 Firstly, it is notable to make the flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process.
 
 
+In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
+
+<!-- The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts. -->
+
+Chapter 2 also explored concepts of fluency in varied forms within constructionist research, technological, digital and computation.
+By way of contrast, the guiding principle being self expression and identity formation. However, given the limitations of constructionism as a theoretical framework, this research also reflects these limits.
+
+The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While CHapter 2. explored the value of pair and peer programming, it also highlighted a gap in the research in terms of x.
+
+SO?
 
 
-In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts.
+CHALLNGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION.
 
-Chapter 2 also explored fluency in varied forms, often tied to constructionist research, technological, digital and computation.
-The guiding principle being self expression and identity formation.
+<!-- NOTE - IS THIS IN THE NEXT CHAPTER? is this just in relation to GDPs? -->
+**Designing for fluency**
 
-CHALLNGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION. 
+The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
 
-NOTE - IS THIS IN THE NEXT CHAPTER? is this just in relation to GDPs?
-Beyond fluidity, it is of value to explore explore other characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design.
+The collection of GDPs with linked documentation fulfils this role.    
 
-INTEGRATE/ mOVE/
-This section synthesises my observations on video data and my own journal reflections on this topic of designing for flow. Flow is a highly subjective experience, and as such, there is a danger that I privilege my own interests in this analysis, and a tendency that I reflect on in the concluding chapter.
+To extend the concepts of designing for fluidity, it is of value to explore the characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design.
+
+LINK TO NEXT CHAPTER.
+
+<!-- This section synthesises my observations on video data and my own journal reflections on this topic of designing for flow. Flow is a highly subjective experience, and as such, there is a danger that I privilege my own interests in this analysis, and a tendency that I reflect on in the concluding chapter. -->
 
 
 <!-- REMOVE OR MOVE TO LR IF NEEDED.
@@ -853,9 +858,26 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ## Conclusion
 
-On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies.
 
-The observations of this chapter show the advantages of GDP as an  relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. An exploration of this aspect follows in the next chapter. In addition, the framing of learning as participation with community repertoires, is explored in the next chapter in relation to participant agency.
+
+On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
+
+The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool.
+The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
+
+
+The findings identified a complex object with a diversity of motivation which pose challenges in communciting in simple terms in terms of what characteristics we are desiging learning environments to devolop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
+
+As such in the next chapter, this gap is addressed via the socio-cultural framing of learning. This is done in several ways?
+
+-  as participation which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1].
+
+
+
+<!-- The observations of this chapter show the advantages of GDP as an  relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.  -->
+
+
 
 <!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
 
